fix: overflow visible for canvas

--- a/src/scss/artifacts.scss
+++ b/src/scss/artifacts.scss
@@ -1,7 +1,7 @@
 #display-artifacts {
   display: flex;
   flex-wrap: wrap;
-  overflow-x: scroll;
+  overflow: visible;
 }
 
 .draggable {
